--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-search-autocomplete": "^5.4.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "json-server": "^0.16.3"
   },
   "scripts": {
+    "server":"node server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
